deployments/pathweb/calibre-web/traefik-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: calibre-web-rewrite-logout-redirect
spec:
  plugin:
    rewriteHeaders:
      rewrites:
        - header: Location
          regex: "^(?:https?://)?(.*)/login"
          replacement: "https://${1}/outpost.goauthentik.io/sign_out"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: calibre-web-static-caching-policy
spec:
  headers:
    customResponseHeaders:
      Cache-Control: public, max-age=86400, s-maxage=86400, stale-while-revalidate=86400
      Set-Cookie: ""
      Vary: ""
