deployments/pathweb/calibre-web/calibre-library-sync-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre-library-sync
  namespace: home-network
  labels:
    app.kubernetes.io/name: calibre-library-sync
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-library-sync
  serviceName: calibre-library-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-library-sync
      annotations:
        io.cilium.proxy-visibility: <Egress/53/UDP/DNS>
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: onedrive
        image: driveone/onedrive:debian
        args:
          - --monitor
          - --confdir
          - /onedrive/conf
          - --syncdir
          - /onedrive/data
          - --single-directory
          - "Calibre Library"
          - --display-running-config
          - --no-remote-delete
          - --auth-files
          - /onedrive/conf/authUrl:/onedrive/conf/authResponse
          - --skip-file
          - ~*|.~*|*.tmp|*.partial
          - --resync-auth
        volumeMounts:
        - name: onedrive-temp
          mountPath: /onedrive/data
        - name: calibre-library
          mountPath: /onedrive/data/Calibre Library
        - name: data
          mountPath: /onedrive/conf
        - name: onedrive-config
          mountPath: /onedrive/conf/config
          subPath: onedrive-config
        resources:
          requests:
            cpu: 182m
            memory: 263M
          limits:
            cpu: 73320m
            memory: 1G
      volumes:
        - name: calibre-library
          persistentVolumeClaim:
            claimName: calibre-library
        - name: onedrive-temp
          emptyDir: {}
        - name: onedrive-config
          configMap:
            name: calibre-library-sync-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ceph-rbd"
      resources:
        requests:
          storage: 5Gi
