deployments/pathweb/calibre-web/calibre-web-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre-web
  namespace: media-services
  labels:
    app.kubernetes.io/name: calibre-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  serviceName: "calibre-web"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
      annotations:
        io.cilium.proxy-visibility: <Egress/53/UDP/DNS>
    spec:
      # gvisor appears incompatible with NFS mounts. It can't see shit. Might be a permissions issue.
      # runtimeClassName: gvisor
      priorityClassName: rfhome-standard
      nodeSelector:
        node-group: baldric
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre-web:latest
        ports:
        - containerPort: 8083
          name: http
        volumeMounts:
        # - name: calibre-library
        #   mountPath: /books
        - name: okinawa-media
          mountPath: /books
          subPath: Books
          readOnly: true
        - name: cache
          mountPath: /cache
        - name: data
          mountPath: /config
        - name: logs
          mountPath: /logs
        resources:
          requests:
            cpu: 10m
            memory: 200Mi
          limits:
            cpu: '2'
            memory: 1G
      - name: calibre-web-log
        image: busybox:1.37
        args: [/bin/sh, -c, 'until [ -f /logs/calibre-web.log ]; do sleep 5; done; tail -n+1 -F /logs/calibre-web.log']
        volumeMounts:
        - name: logs
          mountPath: /logs
        resources:
          requests:
            cpu: 10m
            memory: 35M
          limits:
            cpu: 17m
            memory: 35M
      - name: calibre-web-access-log
        image: busybox:1.37
        args: [/bin/sh, -c, 'until [ -f /logs/access.log ]; do sleep 5; done; tail -n+1 -F /logs/access.log']
        volumeMounts:
        - name: logs
          mountPath: /logs
        resources:
          requests:
            cpu: 10m
            memory: 35M
          limits:
            cpu: 17m
            memory: 35M
      volumes:
        # - name: calibre-library
        #   persistentVolumeClaim:
        #     claimName: calibre-library
        - name: cache
          persistentVolumeClaim:
            claimName: calibre-web-cache
        - name: logs
          emptyDir: {}
        - name: okinawa-media
          persistentVolumeClaim:
            claimName: okinawa-media-smb
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ceph-rbd"
      resources:
        requests:
          storage: 5Gi
