deployments/pathweb/calibre-web/calibre-library-sync-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-library-sync
  namespace: media-services
  labels:
    app.kubernetes.io/name: calibre-library-sync
spec:
  selector:
    app.kubernetes.io/name: calibre-library-sync
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8888
      name: webhook
      targetPort: 8888
