deployments/pathweb/calibre-web/calibre-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: media-services
  labels:
    app.kubernetes.io/name: calibre-web
spec:
  selector:
    app.kubernetes.io/name: calibre-web
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 8083
    targetPort: http
