deployments/pathweb/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
  labels:
    app.kubernetes.io/name: calibre-web
    external-dns: local-pdns
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: ebooks.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: calibre-web
            port: 
              name: http
  tls:
    - hosts:
        - "ebooks.services.home.yrf.me"
      secretName: services-wildcard-cert
