deployments/pathweb/calibre-web/traefik-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calire-web-authentik-support
  annotations:
    kubernetes.io/ingress.class: traefik-traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`ebooks.services.home.yrf.me`) && PathPrefix(`/outpost.goauthentik.io`)
    priority: 100
    services:
    - kind: Service
      name: ak-outpost-authentik-embedded-outpost
      port: http
  - kind: Rule
    match: Host(`ebooks.services.home.yrf.me`) && PathPrefix(`/logout`)
    priority: 100
    middlewares:
    - name: calibre-web-rewrite-logout-redirect
    services:
    - kind: Service
      name: calibre-web
      port: http
  - kind: Rule
    match: Host(`ebooks.services.home.yrf.me`) && PathPrefix(`/static`, `/cover`)
    priority: 100
    middlewares:
    - name: calibre-web-static-caching-policy
    services:
    - kind: Service
      name: calibre-web
      port: http
  tls:
    secretName: services-wildcard-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calire-web-authentik-support-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - cloudflared
  routes:
  - kind: Rule
    match: Host(`ebooks.yrf.me`) && PathPrefix(`/outpost.goauthentik.io`)
    priority: 100
    services:
    - kind: Service
      name: ak-outpost-authentik-external-access
      port: http
  - kind: Rule
    match: Host(`ebooks.yrf.me`) && PathPrefix(`/logout`)
    priority: 100
    middlewares:
    - name: calibre-web-rewrite-logout-redirect
    services:
    - kind: Service
      name: calibre-web
      port: http
  - kind: Rule
    match: Host(`ebooks.yrf.me`) && PathPrefix(`/static`, `/cover`)
    priority: 100
    middlewares:
    - name: calibre-web-static-caching-policy
    services:
    - kind: Service
      name: calibre-web
      port: http
